<resources>
    <string name="app_name">Load app</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="name_button_download">Download</string>
    <string name="name_button_ok">OK</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="toast_message_select_file">Please select the file to download</string>
    <string name="channel_description">Download file</string>

    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="ok">OK</string>
    <!-- Описание способов загрузки файла -->
    <string name="glide_description_download">Glide - Image Loading Library by BumpTech</string>
    <string name="repository_description_download">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- Статус загрузочного файла -->
    <string name="success_download_status">Success</string>
    <string name="fail_download_status">Fail</string>
    <string name="image_description_content_main">image cloud download</string>
</resources>
